--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "broccoli-filter": "^0.2.0",
     "ember-cli": "1.13.1",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
@@ -31,10 +32,12 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
+    "ember-cli-sass": "4.0.1",
     "ember-cli-uglify": "^1.0.1",
     "ember-cli-windows-addon": "^1.2.2",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "grunt-sass": "^1.0.0"
   }
 }
