--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-sass": "^1.0.0"
   },
   "dependencies": {
-    "json-mock": "^0.1.0",
+    "cytoscape": "^2.4.5",
     "json-server": "^0.7.25"
   }
 }
