--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "bootstrap": "~3.3.5",
     "cytoscape": "~2.4.5",
     "cytoscape-cxtmenu": "~2.1.6",
-    "cytoscape-qtip": "~2.2.3"
+    "cytoscape-qtip": "~2.2.3",
+    "tinymce": "~4.2.3"
   }
 }
