--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "broccoli-filter": "^0.2.0",
+    "broccoli-static-compiler": "^0.2.1",
     "cytoscape": "2.4.5",
     "ember-cli": "1.13.1",
     "ember-cli-app-version": "0.4.0",
