--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "cytoscape-qtip": "~2.2.3",
     "tinymce": "~4.2.3",
     "qtip2": "~2.2.1",
-    "ace-builds": "~1.2.0"
+    "ace-builds": "~1.2.0",
+    "ember-simple-auth": "0.8.0"
   }
 }
