--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
+    "ember-cli-simple-auth": "0.8.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-cli-windows-addon": "^1.2.2",
     "ember-data": "1.13.5",
