Fetch current user into session

--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,9 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qtip2": "~2.2.1",
-    "ace-builds": "~1.2.0",
     "ember-simple-auth": "0.8.0",
     "qunit": "~1.17.1",
-    "tinymce": "~4.2.3"
+    "tinymce": "~4.2.3",
+    "ember-cli-moment-shim": "0.0.3"
   }
 }
