--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-sass": "4.0.1",
     "ember-cli-simple-auth": "0.8.0",
     "ember-cli-uglify": "^1.0.1",
+    "ember-cli-uploader": "^0.3.9",
     "ember-cli-windows-addon": "^1.2.2",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
