--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "grunt-sass": "^1.0.0"
   },
   "dependencies": {
+    "ember-component-inbound-actions": "0.0.4",
     "json-server": "^0.7.25",
     "node-sass": "^3.2.0"
   }
