--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
-    "grunt-sass": "^1.0.0"
+    "grunt-sass": "^1.0.0",
+    "ember-cli-html5-validation": "0.0.*"
   },
   "dependencies": {
     "ember-component-inbound-actions": "0.0.4",
