--- a/bower.json
+++ b/bower.json
@@ -16,13 +16,14 @@
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
     "ember-simple-auth": "0.8.0",
+    "ember-uploader": "0.3.9",
     "HCaptions": "~1.0.0",
-    "jquery": "^1.11.1",
+    "html.sortable": "~0.3.0",
+    "jquery": "2.1.4",
     "jquery.livequery": "~1.3.6",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qtip2": "~2.2.1",
     "qunit": "~1.17.1",
-    "tinymce": "~4.2.3",
-    "ember-uploader": "0.3.9"
+    "tinymce": "~4.2.3"
   }
 }
