--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dates": "1.1.3",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-html5-validation": "0.0.*",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
@@ -44,8 +45,8 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
-    "grunt-sass": "^1.0.0",
-    "ember-cli-html5-validation": "0.0.*"
+    "emberx-select": "2.0.1",
+    "grunt-sass": "^1.0.0"
   },
   "dependencies": {
     "ember-component-inbound-actions": "0.0.4",
