--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dates": "1.1.3",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-document-title": "0.2.0",
     "ember-cli-html5-validation": "0.0.*",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
