--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
     "ember-cli-simple-auth": "0.8.0",
+    "ember-cli-simple-auth-oauth2": "0.8.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-cli-uploader": "^0.3.9",
     "ember-cli-windows-addon": "^1.2.2",
