--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
-    "ember-cli-simple-auth": "0.8.0",
-    "ember-cli-simple-auth-oauth2": "0.8.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-cli-uploader": "^0.3.9",
     "ember-cli-windows-addon": "^1.2.2",
@@ -47,6 +45,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
+    "ember-simple-auth": "1.0.1",
     "emberx-select": "2.0.1",
     "grunt-sass": "^1.0.0"
   },
