--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.13.5",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qtip2": "~2.2.0",
     "ember-qunit": "0.4.1",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
@@ -29,6 +28,7 @@
   },
   "devDependencies": {
     "dagre": "~0.7.4",
-    "file-saver.js": "~1.20150507.2"
+    "file-saver.js": "~1.20150507.2",
+    "qtip2": "~2.2.1"
   }
 }
