--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "broccoli-filter": "^0.2.0",
     "broccoli-static-compiler": "^0.2.1",
     "cytoscape": "2.4.5",
-    "ember-cli": "1.13.1",
+    "ember-cli": "^1.13.12",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
@@ -46,7 +46,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
     "ember-simple-auth": "1.0.1",
-    "emberx-select": "2.0.1",
+    "emberx-select": "2.0.2",
     "grunt-sass": "^1.0.0"
   },
   "dependencies": {
