--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-cli-uploader": "^0.3.9",
     "ember-cli-windows-addon": "^1.2.2",
     "ember-data": "1.13.5",
+    "ember-data-model-fragments": "1.13.1",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
