Add datetimepicker to article edit.

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,10 @@
     "qunit": "~1.17.1",
     "sticky-kit": "~1.1.2",
     "tinymce": "~4.2.3",
-    "ember-data-model-fragments": "1.13.1"
+    "ember-data-model-fragments": "1.13.1",
+    "moment": ">= 2.8.0",
+    "moment-timezone": ">= 0.1.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.14.30"
   },
   "devDependencies": {
     "dagre": "~0.7.4",
