--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "broccoli-filter": "^0.2.0",
     "broccoli-static-compiler": "^0.2.1",
     "cytoscape": "2.4.5",
+    "ember-bootstrap-datetimepicker": "1.0.2",
     "ember-cli": "^1.13.12",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
@@ -35,6 +36,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-moment-shim": "0.7.1",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
