--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
     "ember-simple-auth": "1.0.1",
+    "ember-truth-helpers": "1.2.0",
     "emberx-select": "2.0.2",
     "grunt-sass": "^1.0.0"
   },
