--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli": "^1.13.12",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
+    "ember-cli-bootstrap-datetimepicker": "0.1.8",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dates": "1.1.3",
     "ember-cli-dependency-checker": "^1.0.0",
@@ -36,7 +37,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-moment-shim": "1.1.0",
+    "ember-cli-moment-shim": "1.3.0",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "4.0.1",
@@ -48,10 +49,14 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
+    "ember-moment": "6.1.0",
     "ember-simple-auth": "1.0.1",
     "ember-truth-helpers": "1.2.0",
     "emberx-select": "2.0.2",
-    "grunt-sass": "^1.0.0"
+    "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
+    "grunt-sass": "^1.0.0",
+    "moment": "2.14.1",
+    "moment-timezone": "0.5.5"
   },
   "dependencies": {
     "ember-component-inbound-actions": "0.0.4",
