--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ember-i18n": "4.1.3",
     "ember-moment": "6.1.0",
     "ember-simple-auth": "1.0.1",
+    "ember-storage": "1.1.2",
     "ember-truth-helpers": "1.2.0",
     "emberx-select": "2.0.2",
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
