--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "ember-uploader": "0.3.9",
     "enquire": "~2.1.2",
     "HCaptions": "~1.0.0",
-    "html.sortable": "~0.3.0",
+    "html.sortable": "^0.4.2",
     "jquery": "2.1.4",
     "jquery.livequery": "~1.3.6",
     "loader.js": "ember-cli/loader.js#3.2.0",
