--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "emberx-select": "2.0.2",
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
     "grunt-sass": "^1.0.0",
+    "html5sortable": "0.4.2",
     "moment": "2.14.1",
     "moment-timezone": "0.5.5"
   },
