--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
     "grunt-sass": "^1.0.0",
     "html5sortable": "0.4.2",
-    "moment": "2.14.1",
+    "moment": "^2.22.0",
     "moment-timezone": "0.5.5"
   },
   "dependencies": {
