--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "ember-truth-helpers": "1.2.0",
     "emberx-select": "2.2.2",
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
+    "grunt": "^1.0.3",
     "grunt-sass": "^1.0.0",
     "html5sortable": "0.4.2",
     "moment": "^2.22.0",
-    "moment-timezone": "0.5.5"
+    "moment-timezone": "0.5.5",
+    "ui-ember-slider": "^0.5.0"
   },
   "dependencies": {
     "ember-component-inbound-actions": "0.0.4",
