--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,9 @@ version: '2'
 
 services:
   ember:
-    # image: danlynn/ember-cli:1.13.15
-    build: .
-    
-    #stdin_open: true
-    #tty: true
-    
+    build: .    
     volumes:
       - ./:/myapp
-      # - ./node_modules:/myapp/node_modules
       - /myapp/node_modules
       - /myapp/bower_components
     tmpfs:
@@ -19,11 +13,9 @@ services:
       - "4200:4200"
       - "7020:7020"
       - "7357:7357"
-    #entrypoint: tail -f /dev/null
 
-    #entrypoint: /bin/bash
-    #entrypoint: /bin/bash -c 'while true; do sleep 1; done;'
-    
-
-#volumes:
-#  node_modules:
+    # If you want manual bash, do the following.
+    # 1. Uncomment the following line:
+    #entrypoint: tail -f /dev/null # Uncomment this if you want to start bash manually after the 
+    # 2. Do `docker-compose up -d --build`
+    # 3. After it finishes, run `docker exec -it web-frontend_ember_1 /bin/bash`
