--- a/Dockerfile_build
+++ b/Dockerfile_build
@@ -1,4 +1,4 @@
-FROM node:8.15.1
+FROM node:8.15.1 as build-stage
 
 RUN npm install -g ember-cli@1.13.15
 RUN npm install -g bower@1.8.8
@@ -23,8 +23,26 @@ COPY bower.json ./
 RUN npm install
 RUN bower install --allow-root
 
+# this following copies content of host folder to container
 COPY ./ /myapp
 
-# run ember server on container start
-ENTRYPOINT ["/usr/local/bin/ember"]
-CMD ["server", "--environment=remote_dev"]
+ARG environment_selector
+
+RUN /usr/local/bin/ember build --environment=$environment_selector
+RUN echo "$environment_selector" > /myapp/dist/build_for_environment.txt
+
+
+# ---------------------
+
+FROM scratch as dist-stage
+COPY --from=build-stage /myapp/dist ./
+
+
+# Run one of the following commands to build and export to dist folder.
+
+# For build usable for test server:
+# rm -r dist/ || DOCKER_BUILDKIT=1 docker build -f Dockerfile_build_remote_dev -o dist --build-arg environment_selector=remote_dev .
+
+# For build usable for production server:
+# rm -r dist/ || DOCKER_BUILDKIT=1 docker build -f Dockerfile_build_remote_dev -o dist --build-arg environment_selector=production .
+
