--- a/Dockerfile_build
+++ b/Dockerfile_build
@@ -1,4 +1,5 @@
-FROM node:8.15.1 as build-stage
+# --------------
+FROM node:8.15.1 as build_environment_static
 
 RUN npm install -g ember-cli@1.13.15
 RUN npm install -g bower@1.8.8
@@ -14,7 +15,9 @@ RUN \
 	make install
 
 
-EXPOSE 4200 35729
+# --------------
+FROM build_environment_static as build_environment_dynamic
+
 WORKDIR /myapp
 
 COPY package*.json ./
@@ -26,23 +29,31 @@ RUN bower install --allow-root
 # this following copies content of host folder to container
 COPY ./ /myapp
 
+
+# --------------
+FROM build_environment_dynamic as build_stage
 ARG environment_selector
 
 RUN /usr/local/bin/ember build --environment=$environment_selector
 RUN echo "$environment_selector" > /myapp/dist/build_for_environment.txt
 
-
-# ---------------------
-
-FROM scratch as dist-stage
-COPY --from=build-stage /myapp/dist ./
+# --------------
+FROM scratch as build_dist_stage
+COPY --from=build_stage /myapp/dist ./
 
 
-# Run one of the following commands to build and export to dist folder.
+# --------------
+FROM build_environment_dynamic as server_stage
+EXPOSE 4200 35729
+ARG environment_selector
 
-# For build usable for test server:
-# rm -r dist/ || DOCKER_BUILDKIT=1 docker build -f Dockerfile_build_remote_dev -o dist --build-arg environment_selector=remote_dev .
+# run ember server on container start
+ENTRYPOINT ["/usr/local/bin/ember"]
+CMD ["server", "--environment=${environment_selector}"]
 
-# For build usable for production server:
-# rm -r dist/ || DOCKER_BUILDKIT=1 docker build -f Dockerfile_build_remote_dev -o dist --build-arg environment_selector=production .
 
+# Run the following command to build remote_dev (i.e. kyzikos) and export to dist folder.
+# rm -r dist/ || DOCKER_BUILDKIT=1 ENVIRONMENT_SELECTOR=remote_dev docker build -f Dockerfile_build --target build_dist_stage -o dist --build-arg environment_selector=$environment_selector .
+
+# Run the following command to make frontend server that connects to remote_dev (i.e. kyzikos) and makes it available on port 4200.
+# DOCKER_BUILDKIT=1 ENVIRONMENT_SELECTOR=remote_dev docker build -f Dockerfile_build --target server_stage --build-arg environment_selector=$environment_selector -t ksi-frontend .
