--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   buildx:
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase') 
+    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/deploy') 
     runs-on: ubuntu-latest
     steps:
       -
