--- a/.github/workflows/build-deploy-dev-by-comment.yml
+++ b/.github/workflows/build-deploy-dev-by-comment.yml
@@ -6,7 +6,7 @@ on:
 
 
 jobs:
-  buildx:
+  InvokeBuildAndDeployForDevServer:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/deploy') 
     steps:
